- Added test article tiles to "news" page

--- a/files/news/styles.css
+++ b/files/news/styles.css
@@ -586,8 +586,8 @@
 #u563 {
   border-width:0px;
   position:absolute;
-  left:436px;
-  top:110px;
+  left:428px;
+  top:72px;
   width:169px;
   height:37px;
   display:flex;
@@ -606,4 +606,307 @@
   border-width:0px;
   white-space:nowrap;
   text-transform:none;
+}
+.u565_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:425px;
+  height:175px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+.u565 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:425px;
+  height:175px;
+  display:flex;
+}
+.u565 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+.u565_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+.u566_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:75px;
+}
+.u566 {
+  border-width:0px;
+  position:absolute;
+  left:15px;
+  top:15px;
+  width:132px;
+  height:75px;
+  display:flex;
+}
+.u566 .text {
+  position:absolute;
+  align-self:center;
+  padding:2px 2px 2px 2px;
+  box-sizing:border-box;
+  width:100%;
+}
+.u566_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
+}
+.u567_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:39px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Bold', 'Arial', sans-serif;
+  font-weight:700;
+  font-style:normal;
+}
+.u567 {
+  border-width:0px;
+  position:absolute;
+  left:15px;
+  top:101px;
+  width:132px;
+  height:39px;
+  display:flex;
+  font-family:'Arial Bold', 'Arial', sans-serif;
+  font-weight:700;
+  font-style:normal;
+}
+.u567 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+.u567_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+.u568_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:132px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+.u568 {
+  border-width:0px;
+  position:absolute;
+  left:15px;
+  top:140px;
+  width:132px;
+  height:16px;
+  display:flex;
+}
+.u568 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+.u568_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+.u569_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:250px;
+  height:145px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+.u569 {
+  border-width:0px;
+  position:absolute;
+  left:157px;
+  top:21px;
+  width:250px;
+  height:145px;
+  display:flex;
+}
+.u569 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+.u569_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+}
+.u570_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:30px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  text-align:right;
+}
+.u570 {
+  border-width:0px;
+  position:absolute;
+  left:390px;
+  top:5px;
+  width:30px;
+  height:16px;
+  display:flex;
+  text-align:right;
+}
+.u570 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+.u570_text {
+  border-width:0px;
+  white-space:nowrap;
+  text-transform:none;
+}
+#u564-1 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:425px;
+  height:175px;
+}
+#u564-2 {
+  border-width:0px;
+  position:absolute;
+  left:525px;
+  top:0px;
+  width:425px;
+  height:175px;
+}
+#u564-3 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:250px;
+  width:425px;
+  height:175px;
+}
+#u564-4 {
+  border-width:0px;
+  position:absolute;
+  left:525px;
+  top:250px;
+  width:425px;
+  height:175px;
+}
+#u564 {
+  border-width:0px;
+  position:absolute;
+  left:38px;
+  top:155px;
+  width:950px;
+  height:425px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+}
+#u571_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:15px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+}
+#u571 {
+  border-width:0px;
+  position:absolute;
+  left:264px;
+  top:668px;
+  width:300px;
+  height:15px;
+  display:flex;
+}
+#u571 .text {
+  position:absolute;
+  align-self:flex-start;
+  padding:0px 0px 0px 0px;
+  box-sizing:border-box;
+  width:100%;
+}
+#u571_text {
+  border-width:0px;
+  word-wrap:break-word;
+  text-transform:none;
+  visibility:hidden;
 }
